--- a/mobi/templates/package.json
+++ b/mobi/templates/package.json
@@ -7,19 +7,25 @@
   "license": "MIT",
   "devDependencies": {
     "yargs": "~1.2.6",
+    "glob": "~4.2.1",
+    "del": "~0.1.3",
+    "browser-sync": "~1.3.7",
+    "portfinder": "~0.2.1",
+    "gm": "~1.14.2",
+    "multi-sprite": "~0.0.4",
+    "moment": "~2.8.3",
+    "svn-push": "0.0.1",
     "gulp": "~3.8.5",
-    "gulp-changed": "~0.4.0",
-    "gulp-clean": "~0.3.1",
-    "gulp-connect": "~2.0.5",
-    "gulp-connect-multi": "~1.0.8",
-    "gulp-if": "~1.2.1",
-    "gulp-imagemin": "~0.6.1",
-    "gulp-minify-css": "~0.3.5",
-    "gulp-plumber": "~0.6.3",
-    "gulp-sass": "~0.7.2",
-    "gulp-uglify": "~0.3.1",
-    "gulp-watch": "~0.6.8",
+    "gulp-load-plugins": "~0.6.0",
+    "gulp-sass": "~1.0.0",
     "gulp-autoprefixer": "0.0.6",
-    "gulp-zip": "~0.4.0"
+    "gulp-minify-css": "~0.3.5",
+    "gulp-uglify": "~0.3.1",
+    "gulp-imagemin": "~0.6.1",
+    "gulp-zip": "~0.4.0",
+    "gulp-header": "~1.1.1",
+    "gulp-cdn-absolute-path": "0.0.4",
+    "gulp-ejs": "~1.0.0",
+    "gulp-replace": "~0.5.0"
   }
 }
