--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-lego",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "description": "f2e workflow, a gulp app generator",
   "repository": {
     "type": "git",
@@ -8,7 +8,8 @@
   },
   "main": "app/index.js",
   "dependencies": {
-    "yeoman-generator": "~0.17.0"
+    "yeoman-generator": "~0.17.0",
+    "del": "~0.1.3"
   },
   "author": "twlk28",
   "license": "MIT",
