--- a/pc/templates/package.json
+++ b/pc/templates/package.json
@@ -18,7 +18,7 @@
     "gulp": "~3.8.5",
     "gulp-load-plugins": "~0.6.0",
     "gulp-sass": "~1.0.0",
-    "gulp-autoprefixer": "0.0.6",
+    "gulp-autoprefixer": "~2.0.0",
     "gulp-minify-css": "~0.3.5",
     "gulp-uglify": "~0.3.1",
     "gulp-imagemin": "~0.6.1",
