--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -7,17 +7,20 @@
   "license": "MIT",
   "devDependencies": {
     "yargs": "~1.2.6",
-    "glob": "~4.2.1",
     "chalk": "^0.5.1",
+    "glob": "~4.2.1",
     "del": "~0.1.3",
     "browser-sync": "~1.3.7",
     "portfinder": "~0.2.1",
     "gm": "~1.14.2",
     "multi-sprite": "~0.1.2",
     "moment": "~2.8.3",
-    "gulp": "~3.8.5",
+    "gulp": "~3.8.10",
+    "gulp-cached": "^1.0.1",
+    "gulp-remember": "^0.3.0",
     "gulp-load-plugins": "~0.6.0",
     "gulp-sass": "~1.0.0",
+    "gulp-sourcemaps": "~1.3.0",
     "gulp-autoprefixer": "~2.0.0",
     "gulp-minify-css": "~0.3.5",
     "gulp-uglify": "~0.3.1",
