--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -24,6 +24,7 @@
     "gulp-autoprefixer": "~2.0.0",
     "gulp-minify-css": "~0.3.5",
     "gulp-uglify": "~0.3.1",
+    "gulp-notify": "^2.2.0",
     "gulp-imagemin": "~0.6.1",
     "gulp-zip": "~0.4.0",
     "gulp-header": "~1.1.1",
