--- a/more/templates/package.json
+++ b/more/templates/package.json
@@ -25,6 +25,7 @@
     "gulp-minify-css": "~0.3.5",
     "gulp-uglify": "~0.3.1",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.0",
     "gulp-imagemin": "~0.6.1",
     "gulp-zip": "~0.4.0",
     "gulp-header": "~1.1.1",
