--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "generator-lego",
-  "version": "0.2.17",
-  "description": "f2e workflow, a gulp app generator",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/duowan/generator-lego.git"
-  },
-  "main": "app/index.js",
-  "dependencies": {
-    "yeoman-generator": "~0.17.0",
-    "del": "~0.1.3"
-  },
-  "author": "twlk28",
-  "license": "MIT",
-  "keywords": [
-    "yeoman-generator",
-    "f2e",
-    "workflow",
-    "gulp"
-  ]
+    "name": "generator-lego",
+    "version": "0.2.18",
+    "description": "F2E workflow, a gulp app generator",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/duowan/generator-lego.git"
+    },
+    "homepage": "http://duowan.github.io/generator-lego/",
+    "bugs": {
+        "url": "https://github.com/duowan/generator-lego/issues"
+    },
+    "main": "app/index.js",
+    "dependencies": {
+        "yeoman-generator": "~0.17.0",
+        "del": "~0.1.3"
+    },
+    "devDependencies": {},
+    "readmeFilename": "README.md",
+    "author": "twlk28",
+    "keywords": [
+        "yeoman-generator",
+        "f2e",
+        "workflow",
+        "gulp",
+        "css-sprite",
+        "yyued"
+    ]
 }
