--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -26,6 +26,8 @@
     "gulp-uglify": "~0.3.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
+    "gulp-svg-symbols": "^0.3.1",
+    "gulp-rename": "~1.2.2",
     "gulp-imagemin": "~0.6.1",
     "gulp-zip": "~0.4.0",
     "gulp-header": "~1.1.1",
