--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -11,8 +11,7 @@
     "glob": "~4.2.1",
     "del": "~0.1.3",
     "browser-sync": "^2.7.0",
-    "gm": "~1.14.2",
-    "multi-sprite": "^0.1.7",
+    "multi-sprite": "^0.1.8",
     "moment": "~2.8.3",
     "svn-push": "0.0.2",
     "gulp": "~3.8.10",
@@ -33,6 +32,7 @@
     "gulp-header": "~1.1.1",
     "gulp-cdn-absolute-path": "0.0.4",
     "gulp-ejs": "~1.0.0",
-    "gulp-replace": "~0.5.0"
+    "gulp-replace": "~0.5.0",
+    "qrcode-terminal": "^0.10.0"
   }
 }
