--- a/more/templates/package.json
+++ b/more/templates/package.json
@@ -18,7 +18,7 @@
     "gulp-cached": "^1.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-load-plugins": "~0.6.0",
-    "gulp-sass": "^2.0.0",
+    "gulp-sass": "<%= pkgGulpSassVersion %>",
     "gulp-sourcemaps": "~1.3.0",
     "gulp-autoprefixer": "~2.0.0",
     "gulp-minify-css": "~0.3.5",
