--- a/more/templates/package.json
+++ b/more/templates/package.json
@@ -11,7 +11,7 @@
     "glob": "~4.2.1",
     "del": "~0.1.3",
     "browser-sync": "^2.7.0",
-    "multi-sprite": "^0.2.0",
+    "multi-sprite": "^0.2.1",
     "moment": "~2.8.3",
     "svn-push": "0.0.2",
     "gulp": "~3.8.10",
@@ -33,6 +33,8 @@
     "gulp-cdn-absolute-path": "0.0.4",
     "gulp-ejs": "~1.0.0",
     "gulp-replace": "~0.5.0",
+    "gulp-jshint": "~1.11.2",
+    "jshint-stylish": "~2.0.1",
     "qrcode-terminal": "^0.10.0"
   }
 }
