构建阶段增加语法检测
1. 【gulp】语法检测在 dev build 阶段执行，build 时检测js错误中断后续任务
2. 【yo】初始化 README.md路径更正 消除生成器警告
3. 【gulp】构建阶段支持格式化 HTML `gulp build -b`
4. 【gulp】构建阶段文件拷贝 src 下所有没有构建任务的文件
5. 【gulp】构建阶段 增加png图片压缩
6. 【依赖库】部分模块更新，配置更新

--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -27,7 +27,8 @@
     "gulp-plumber": "^1.0.0",
     "gulp-svg-symbols": "^0.3.1",
     "gulp-rename": "~1.2.2",
-    "gulp-imagemin": "~0.6.1",
+    "gulp-imagemin": "~2.4.0",
+    "imagemin-pngquant": "~4.2.0",
     "gulp-zip": "~0.4.0",
     "gulp-header": "~1.1.1",
     "gulp-cdn-absolute-path": "0.0.4",
@@ -35,6 +36,8 @@
     "gulp-replace": "~0.5.0",
     "gulp-jshint": "~1.11.2",
     "jshint-stylish": "~2.0.1",
+    "gulp-jsbeautifier": "^1.0.1",
+    "map-stream": "0.0.6",
     "qrcode-terminal": "^0.10.0"
   }
 }
