--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -22,7 +22,7 @@
     "gulp-sourcemaps": "~1.3.0",
     "gulp-autoprefixer": "~2.0.0",
     "gulp-minify-css": "~0.3.5",
-    "gulp-uglify": "~0.3.1",
+    "gulp-uglify": "^1.5.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
     "gulp-svg-symbols": "^0.3.1",
