--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -14,7 +14,7 @@
     "multi-sprite": "^0.2.3",
     "moment": "~2.8.3",
     "svn-push": "0.0.2",
-    "gulp": "~3.8.10",
+    "gulp": "~3.9.0",
     "gulp-cached": "^1.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-load-plugins": "~0.6.0",
@@ -34,8 +34,8 @@
     "gulp-cdn-absolute-path": "0.0.4",
     "gulp-ejs": "~1.0.0",
     "gulp-replace": "~0.5.0",
-    "gulp-jshint": "~1.11.2",
-    "jshint-stylish": "~2.0.1",
+    "gulp-fecs-fork": "~0.0.1",
+    "gulp-strip-comments": "^2.3.2",
     "gulp-jsbeautifier": "^1.0.1",
     "map-stream": "0.0.6",
     "qrcode-terminal": "^0.10.0"
