--- a/more/templates/package.json
+++ b/more/templates/package.json
@@ -34,8 +34,8 @@
     "gulp-cdn-absolute-path": "0.0.4",
     "gulp-ejs": "~1.0.0",
     "gulp-replace": "~0.5.0",
-    "gulp-jshint": "~1.11.2",
-    "jshint-stylish": "~2.0.1",
+    "gulp-fecs-fork": "~0.0.1",
+    "gulp-strip-comments": "^2.3.2",
     "gulp-jsbeautifier": "^1.0.1",
     "map-stream": "0.0.6",
     "qrcode-terminal": "^0.10.0"
