--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "generator-lego",
-    "version": "0.2.24",
+    "version": "0.2.29",
     "description": "F2E workflow, a gulp app generator",
     "license": "MIT",
     "repository": {
@@ -18,7 +18,11 @@
     },
     "dependencies": {
         "yeoman-generator": "~0.17.6",
-        "del": "~0.1.3"
+        "del": "~0.1.3",
+        "glob": "~4.0.6",
+        "lodash": "~2.4.1",
+        "chalk": "~0.5.1",
+        "mkdirp": "~0.5.0"
     },
     "devDependencies": {},
     "readmeFilename": "README.md",
